--- a/mirrors2016full-2016-10-24/lineup.html
+++ b/mirrors2016full-2016-10-24/lineup.html
@@ -284,5 +284,15 @@
 		<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1031663084/?value=1.00&amp;currency_code=GBP&amp;label=UeYSCJm4-mkQ7Nv36wM&amp;guid=ON&amp;script=0"/>
 		</div>
 	</noscript>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	 
+
+	  ga('create', 'UA-85215484-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </body>
 </html>
