--- a/girlsandboys/events.html
+++ b/girlsandboys/events.html
@@ -48,6 +48,17 @@
 		    }
 		});
 		</script> -->
+	<script type="text/javascript">
+		$(document).ready(function() {
+
+		$('a').on('click touchend', function(e) {
+		var el = $(this);
+		var link = el.attr('href');
+		window.location = link;
+		});
+
+		});
+	</script>
 </head>
 <body>
 	<header>
