--- a/Ordeo/index.html
+++ b/Ordeo/index.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+<html>
 <head>
+	<title></title>
+	
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>ORDEO - Bespoke Composition</title>
-  <meta name="description" content="Bespoke music composition for Film, Television and Artists">
-  <meta name="author" content="">
-  <meta name="google-site-verification" content="wgsILUBKai7x5jbZ2jSutHFtUuk9UdBN65yao3kLfRg"/>
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/custom.css">
-
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+	<!-- Favicon
+	–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+	<link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div id="business-card" class="offset-by-two eight columns" style="margin-top: 16%">
+	<div class="container">
+      <div id="business-card">
         <h1>ORDEO</h1>
         <p>
         Bespoke Composition
@@ -50,10 +31,7 @@
         <p><a href="https://www.google.co.uk/maps/place/235+Portobello+Rd,+London+W11+1LT/@51.5170172,-0.2082979,17z/data=!3m1!4b1!4m5!3m4!1s0x4876101e792172f3:0x676ae64c672d7c7b!8m2!3d51.5170139!4d-0.2061092" target="_blank"> 235a Portobello Road <br>London W11 1LT </a></p>
       </div>
     </div>
-  </div>
 
 
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
